--- a/WebApiInMVC/Mvc/Views/Home/Index.cshtml
+++ b/WebApiInMVC/Mvc/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
                     <b>FOODS</b>
                 </span>
                 <div class="btn-ber">
-                    <a class="get_btn hvr-bounce-to-top" href="@Url.Action("Index", "Employee")">Get started</a>
+                    <a class="get_btn hvr-bounce-to-top" href="@Url.Action("Index", "Employee")">CURD OPP</a>
                     <a class="learn_btn hvr-bounce-to-top" href="#">Learn More</a>
                 </div>
             </h3>
